--- a/frontend/Anket0roo-App/package.json
+++ b/frontend/Anket0roo-App/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.1.7",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^5.1.3",
     "html-webpack-plugin": "^5.3.1",
@@ -24,7 +25,13 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@types/webfontloader": "^1.6.32",
+    "fontsource-roboto": "^4.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
+    "webfontloader": "^1.6.28"
   }
 }
