--- a/frontend/Anket0roo-App/package.json
+++ b/frontend/Anket0roo-App/package.json
@@ -26,10 +26,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/webfontloader": "^1.6.32",
+    "axios": "^0.21.1",
+    "class-transformer": "^0.4.0",
     "fontsource-roboto": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "webfontloader": "^1.6.28"
