--- a/frontend/Anket0roo-App/tsconfig.json
+++ b/frontend/Anket0roo-App/tsconfig.json
@@ -8,7 +8,8 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "es5",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true
   },
   "include": [
     "src/components/index.tsx"
