--- a/frontend/Anket0roo-App/package.json
+++ b/frontend/Anket0roo-App/package.json
@@ -25,7 +25,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.0.0",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/webfontloader": "^1.6.32",
     "axios": "^0.21.1",
@@ -33,9 +35,11 @@
     "fontsource-roboto": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.0.0",
     "react-images-upload": "^1.2.8",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "yup": "^0.32.9"
   }
 }
