--- a/frontend/Anket0roo-App/package.json
+++ b/frontend/Anket0roo-App/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/history": "^4.7.8",
     "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-dom": "^17.0.3",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^5.1.3",
     "html-webpack-plugin": "^5.3.1",
@@ -29,18 +29,26 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@react-navigation/native": "^5.9.4",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/react-swipeable-views": "^0.13.0",
     "@types/webfontloader": "^1.6.32",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "class-transformer": "^0.4.0",
+    "crypto-browserify": "^3.12.0",
     "fontsource-roboto": "^4.0.0",
+    "history": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.0.0",
     "react-images-upload": "^1.2.8",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
+    "react-swipeable-views": "^0.13.9",
+    "stream-browserify": "^3.0.0",
+    "svg-url-loader": "^7.1.1",
+    "util": "^0.12.3",
     "webfontloader": "^1.6.28",
     "yup": "^0.32.9"
   }
