[Fixed] Fixed most React rendering pitfalls & idiocy (testing process has begun!)

--- a/frontend/Anket0roo-App/tsconfig.json
+++ b/frontend/Anket0roo-App/tsconfig.json
@@ -7,11 +7,12 @@
     "preserveConstEnums": true,
     "removeComments": true,
     "sourceMap": true,
+    "rootDir": ".",
     "target": "es6",
     "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
   },
   "include": [
-    "src/components/index.tsx"
+    "./src/**/**/\*"
   ]
 }
