--- a/frontend/Anket0roo-App/package.json
+++ b/frontend/Anket0roo-App/package.json
@@ -9,12 +9,22 @@
   },
   "keywords": [],
   "author": "",
+  "homepage": ".",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@babel/runtime": "^7.13.10",
     "@types/history": "^4.7.8",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^5.1.3",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
@@ -39,6 +49,7 @@
     "fontsource-roboto": "^4.0.0",
     "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
+    "process": "^0.11.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.0.0",
