--- a/frontend/Anket0roo-App/package.json
+++ b/frontend/Anket0roo-App/package.json
@@ -22,6 +22,7 @@
     "@types/history": "^4.7.8",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-window": "^1.8.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -57,6 +58,7 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-swipeable-views": "^0.13.9",
+    "react-window": "^1.8.6",
     "stream-browserify": "^3.0.0",
     "svg-url-loader": "^7.1.1",
     "util": "^0.12.3",
