--- a/frontend/Anket0roo-App/package.json
+++ b/frontend/Anket0roo-App/package.json
@@ -53,6 +53,7 @@
     "process": "^0.11.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-hook-form": "^7.0.0",
     "react-images-upload": "^1.2.8",
     "react-router": "^6.0.0-beta.0",
